Let jumped-to section heads appear below fixed/sticky header
Also works for 'clean' layout, but needs some more tweaking for when the header
is not displayed. In that case the section head is still offset, i.e. appears
too low.

--- a/resources/styles/screen.less
+++ b/resources/styles/screen.less
@@ -399,3 +399,14 @@ table.small {
 table.mw-recentchanges-table {
 	width: 100%;
 }
+
+.layout-fixedhead, .layout-stickyhead, .layout-clean {
+	h1, h2, h3, h4, h5, h6 {
+		>span.mw-headline:before {
+			content: "";
+			display: block;
+			height: @navbar-height;
+			margin-top: 0-@navbar-height;
+		}
+	}
+}
